# canopy

./: .env copy.example  .gitignore  README.MD  README.md  excluded_specs.toml.example  extras_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
canopy/: __init__.py  canopy.py  helpers.py
canopy/scripts/: canopy_docs.py  canvas_api_builder.py
canopy/scripts/templates/: canvas_client.py.jinja2
canopy/templates/: canopy_api.py.jinja2  canopy_api_async.py.jinja2  canvas_client.py.jinja2
tests/: test_canopy.py  test_canopy_docs.py  test_helpers.py  test_templates.py
tools/canvas-spec-gen/: Containerfile  Makefile
