[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canopy"
version = "2026.03.19.1"
description = "Helper for Instructure Canvas API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
builder = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "httpx>=0.27",
]
extras = [
    "aiolimiter>=1.2.1",
    "python-dotenv>=1.1.0",
]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "mypy>=1.10",
]

[[project.authors]]
name = "Tyler Clair"
email = "tyler.clair@gmail.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/tylerclair/canopy"
Repository = "https://github.com/tylerclair/canopy"

[project.scripts]
canvas_api_builder = "canopy.scripts.canvas_api_builder:cli"
canopy_docs = "canopy.scripts.canopy_docs:cli"

[tool.hatch.build.targets.wheel]
packages = ["canopy"]
include = ["canopy/templates/*.jinja2"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"